--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,23 @@
-/* You can add global styles to this file, and also import other style files */
+div > *{
+  margin:5px;
+}
+
+.color{
+  background-color: #e0e0e0;
+}
+.input-box{
+  width: 20rem;
+  height: 30px;
+  border: 1px solid #e0e0e0;
+  border-radius: 0.75rem;
+  padding: 5px;
+  margin-bottom: 0.5rem;
+}
+.btn{
+  margin: 0.5rem 0.5rem 0.5rem 0;
+}
+
+.center{
+  margin: 0 auto;
+  width: 30%;
+}
