Added routing module to web app

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,7 +8,7 @@
       <label for="pass">Password:</label><br>
       <input class="input-box" type="password" id="pass"><br>
       <button class="btn btn-success">Login</button>
-      <button class="btn btn-warning">Register</button>
+      <button class="btn btn-warning" [routerLink]="['/register']">Register</button>
       </div>
     </div>
     </div>
