--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -14,7 +14,7 @@
       <label for="email">E-mail:</label><br>
       <input class="input-box" id="email" type="email">
         <button class="btn btn-success" id="register">Register</button><br>
-      <a href="#username">Already have an account?</a>
+      <a [routerLink]="['/login']">Already have an account?</a>
       </div>
     </div>
   </div>
