--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,12 +1,12 @@
 <div class="container align-content-center ">
-  <div class="container" *ngIf="!isEditing">
+  <div class="container" *ngIf="!this.isEditing">
     <div class="container color" >
       <h3>Posts ({{listOfPosts.length}}):</h3>
-      <div *ngFor='let post of listOfPosts; let i'>
-        <p> by {{post.userId}} at {{post.date.toString()}}</p>
-        <textarea class="form-control" rows="4" cols="50" [disabled]="post.isEditing == false" [(ngModel)]="post.comment">{{post.comment}}</textarea>
-        <button class="btn btn-danger" (click)="deletePost(post.id)"><i class="bi bi-trash"></i> Delete</button>
-        <button class="btn btn-warning" (click)="isEditing=!isEditing; editPost(post.id, isEditing)" *ngIf="!isEditing"><i class="bi bi-pencil-square"></i> Edit</button>
+      <div *ngFor='let post of listOfPosts; index as i'>
+        <p> by {{post.userId}} at {{post.timestamp}}</p>
+        <textarea class="form-control" rows="4" cols="50" [disabled]="isEditing == false" [(ngModel)]="post.comment">{{post.comment}}</textarea>
+        <button class="btn btn-danger" (click)="deletePost(i)"><i class="bi bi-trash"></i> Delete</button>
+        <button class="btn btn-warning" (click)="this.isEditing=!this.isEditing; editPost(i, this.isEditing);" *ngIf="!isEditing"><i class="bi bi-pencil-square"></i> Edit</button>
         <br>
       </div>
     </div>
@@ -17,23 +17,24 @@
       <div class="container-md-6">
         <div class="container-md-6" *ngIf="addComment">
           <label for="username">Username:</label><br>
-          <input id="username" type="text" [(ngModel)]="username"><br>
+          <input id="username" type="text" [(ngModel)]="this.username"><br>
           <label for="comment">Comment</label><br>
-          <textarea id="comment" rows="4" cols="50" [(ngModel)]="comment"></textarea><br>
-          <button class="btn btn-primary" [disabled]="comment.length==0 || username.length==0" (click)="addPost()"
-                  [ngClass]="(comment.length==0) ? 'btn btn-danger' : 'btn btn-success'">Post</button>
+          <textarea id="comment" rows="4" cols="50" [(ngModel)]="this.comment"></textarea><br>
+          <button class="btn btn-primary" [disabled]="this.comment.length==0" (click)="addPost()"
+                  [ngClass]="(this.comment.length==0) ? 'btn btn-danger' : 'btn btn-success'">Post</button>
         </div>
       </div>
     </div>
   </div>
-  <div class="container" *ngIf="isEditing">
+  <!-- If is editing-->
+  <div class="container" *ngIf="this.isEditing">
     <div class="container" style="background-color: #e0e0e0" >
       <h3>Posts ({{listOfPosts.length}}):</h3>
-      <div *ngFor='let post of listOfPosts; let i'>
-        <div *ngIf="post.id == idToEdit">
-          <p> by {{post.userId}} at {{post.date}}</p>
-          <textarea class="form-control" rows="4" cols="50" [disabled]="post.isEditing == false" [(ngModel)]="post.comment">{{post.comment}}</textarea>
-          <button class="btn btn-warning" (click)="isEditing=!isEditing; editPost(post.id, isEditing)"><i class="bi bi-save"></i> Save changes</button>
+      <div *ngFor='let post of listOfPosts; index as i'>
+        <div *ngIf="i === idToEdit">
+          <p> by {{post.userId}} at {{post.timestamp}}</p>
+          <textarea class="form-control" rows="4" cols="50"  [(ngModel)]="post.comment">{{post.comment}}</textarea>
+          <button class="btn btn-warning" (click)="this.isEditing=!this.isEditing; saveChanges(i); editPost(i, isEditing)"><i class="bi bi-save"></i> Save changes</button>
           <br>
         </div>
       </div>
