--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,13 +3,21 @@
     <div class="container color" >
       <div class="center">
       <h2>Login:</h2>
+        <form [formGroup]="loginForm" (ngSubmit)="LogIn()">
       <label for="username">Username:</label><br>
-      <input class="input-box" id="username" type="text" [(ngModel)]="this.username"><br>
+      <input class="input-box" id="username" type="text" formControlName="username"><br>
       <label for="pass">Password:</label><br>
-      <input class="input-box" type="password" id="pass" [(ngModel)]="this.password"><br>
-      <button class="btn btn-success" (click)="LogIn() ">Login</button>
+      <input class="input-box" type="password" id="pass" formControlName="password"><br>
+      <button class="btn btn-success" type="submit">Login</button>
       <button class="btn btn-warning" [routerLink]="['/register']">Register</button>
+        </form>
+        <div class="errorBox" *ngIf="this.errorMasage != ''">
+          <h3 class="ms-5 p-2">{{this.errorMasage}}!</h3>
       </div>
+        <div class="successBox" *ngIf="this.successMassage != ''">
+          <h3 class="ms-5 p-2">{{this.successMassage}}!</h3>
+        </div>
     </div>
     </div>
+</div>
 </div>
