--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -2,19 +2,27 @@
   <div class="container center">
     <div class="container color" >
       <div class="center">
+        <form [formGroup]="regForm" (ngSubmit)="makeNewUser()">
       <h2>Register form:</h2>
       <label for="username">Username:</label><br>
-      <input class="input-box" id="username" type="text" [(ngModel)]="this.username"><br>
+      <input class="input-box" id="username" type="text" formControlName="username"><br>
       <label for="pass">Password:</label><br>
-      <input class="input-box" type="password" id="pass" [(ngModel)]="this.pass"><br>
+      <input class="input-box" type="password" id="pass" formControlName="pass"><br>
       <label for="passR">Repeat password:</label><br>
-      <input class="input-box" type="password" id="passR" [(ngModel)]="this.passR"><br>
+      <input class="input-box" type="password" id="passR" formControlName="passR"><br>
       <label for="name">Name:</label><br>
-      <input class="input-box" id="name" type="text" [(ngModel)]="this.name"><br>
+      <input class="input-box" id="name" type="text" formControlName="name"><br>
       <label for="email">E-mail:</label><br>
-      <input class="input-box" id="email" type="email" [(ngModel)]="this.email">
-        <button class="btn btn-success" id="register" (click)="makeNewUser()">Register</button><br>
+      <input class="input-box" id="email" type="email" formControlName="email">
+        <button class="btn btn-success" id="register" type="submit">Register</button><br>
       <a [routerLink]="['/login']">Already have an account?</a>
+        </form>
+        <div class="errorBox" *ngIf="this.errorMasage != ''">
+          <h3 class="ms-5 p-2">{{this.errorMasage}}!</h3>
+        </div>
+        <div class="successBox" *ngIf="this.successMassage != ''">
+          <h3 class="ms-5 p-2">{{this.successMassage}}!</h3>
+        </div>
       </div>
     </div>
   </div>
